--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "stylus-loader": "^1.5.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "lodash": "^4.13.1"
   }
 }
